# alsa_rtsp_server

./: CMakeLists.txt  README.md
include/: alsa_capture.h  alsa_pcm_framed_source.h  alsa_pcm_media_subsession.h  constants.h  live555_rtsp_server_manager.h
src/: alsa_capture.cpp  alsa_pcm_framed_source.cpp  alsa_pcm_media_subsession.cpp  live555_rtsp_server_manager.cpp  main.cpp
